RESOLVED FIXED54981
[GTK] position:fixed elements flicker while scrolling after r74196
https://bugs.webkit.org/show_bug.cgi?id=54981
Summary [GTK] position:fixed elements flicker while scrolling after r74196
Martin Robinson
Reported 2011-02-22 12:14:11 PST
The issue here seems to be that we are asking GDK to process updates, before we have queued all the necessary invalidations for scrolling. When scrolling with fixed position elements, the elements are invalidated after the call to ChromClient::scroll.
Attachments
Patch (3.75 KB, patch)
2011-02-22 12:19 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2011-02-22 12:19:05 PST
Xan Lopez
Comment 2 2011-02-22 12:21:16 PST
Comment on attachment 83359 [details] Patch I'd be interested in the possibility of having your babies.
Martin Robinson
Comment 3 2011-02-22 12:43:00 PST
Note You need to log in before you can comment on or make changes to this bug.