Source/WebKit/gtk/WebCoreSupport/ChromeClientGtk.h
@@ -154,6 +154,7 @@ namespace WebKit {
         WebKitWebView* m_webView;
         WebCore::KURL m_hoveredLinkURL;
         unsigned int m_closeSoonTimer;
+        bool m_pendingScrollInvalidations;
     };
 }
 
